HelloUltraviolet/Fixtures/RejectedSource/FFI/ForeignEnsuresNullResult/Expected.uv
//! Expected diagnostic metadata for the ForeignEnsuresNullResult rejected-source specimen.

expectedDiagnostic("E-SEM-2856", "rule.23.ForeignEnsures-NullResult-Err")
